style.css
html body{
    margin: 0px;
    padding: 0px;
    font-size: 70%;
}
#book_template{
    display: none;
}
a {
    color: inherit;
    text-decoration: none; /* no underline */
  }
input[type=number], input[type=text]{
	list-style: none;
	line-height: 1;
    display: block;
    width: 200px;
    height: 25px;
}
.book_footer{
    display: flex;
    justify-content: space-between;
    justify-items: center;
    align-content: center;
    align-items: center;
}
.book_img{
    width: 25px;
    height: 25px;
}
.navbar_elements{
    padding: 10px 20px;
}
#form_toptitle{
    text-align: center;
}
#container{
    display: flex;
    flex-direction: row;
    padding: 10px;
}
#navbar{
    text-align: right;
    background-image: url("https://www.bio-shine.com/wp-content/uploads/2017/03/header-sky.jpg");
    background-repeat: no-repeat;
    background-size: 100% 100%;
    padding: 10px;
    font-size: 2em;
    height: 80px;
}
.book_header{
    text-align: right;
}
.remove_book{
    position: relative;
    width: 20px;
    height: 20px;

    color: red;
}
#form_container{
    display: none;
    width: 100%;
    height: 500px;
    justify-content: center;
    align-items: center;

}
.book_id{
    display: none;
}
#form{
    padding: 50px;
    background-color: #ccc;
}
#submit_btn{
    float: right;
}
.form_elements{
    margin:10px;
}
.form_checkboxes{
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.book{
    width: 150px;
    height: 200px;
    background-image: url("https://i.imgur.com/ZRukxtz.png");

    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 10px 10px 10px 10px;
    max-width: 150px;
    margin: 10px;
    color: #fff;
}
.title{
    margin-top:0px;
    font-size: 1.5em;
    font-weight: bold;
}
.author{
    font-size: 1.2em;
    
}
.pages{
    font-size:  1em;
}
.read_icon{
    text-align: right;
}
.addbook_button {
	-moz-box-shadow: 0px 10px 14px -7px #3e7327;
	-webkit-box-shadow: 0px 10px 14px -7px #3e7327;
	box-shadow: 0px 10px 14px -7px #3e7327;
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77b55a), color-stop(1, #72b352));
	background:-moz-linear-gradient(top, #77b55a 5%, #72b352 100%);
	background:-webkit-linear-gradient(top, #77b55a 5%, #72b352 100%);
	background:-o-linear-gradient(top, #77b55a 5%, #72b352 100%);
	background:-ms-linear-gradient(top, #77b55a 5%, #72b352 100%);
	background:linear-gradient(to bottom, #77b55a 5%, #72b352 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#77b55a', endColorstr='#72b352',GradientType=0);
	background-color:#77b55a;
	-moz-border-radius:4px;
	-webkit-border-radius:4px;
	border-radius:4px;
	border:1px solid #4b8f29;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Arial;
	font-size:15px;
	font-weight:bold;
	padding:6px 12px;
	text-decoration:none;
	text-shadow:0px 1px 0px #5b8a3c;
}
.addbook_button:hover {
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #72b352), color-stop(1, #77b55a));
	background:-moz-linear-gradient(top, #72b352 5%, #77b55a 100%);
	background:-webkit-linear-gradient(top, #72b352 5%, #77b55a 100%);
	background:-o-linear-gradient(top, #72b352 5%, #77b55a 100%);
	background:-ms-linear-gradient(top, #72b352 5%, #77b55a 100%);
	background:linear-gradient(to bottom, #72b352 5%, #77b55a 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#72b352', endColorstr='#77b55a',GradientType=0);
	background-color:#72b352;
}
.addbook_button:active {
	position:relative;
	top:1px;
}

